--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,10 +5,13 @@
 <app-menu-title></app-menu-title>
 
 <div class = "container__articles">
-    <div class="articles_main">
-        <app-big-card></app-big-card>
+    <div class="articles__main">
+        <app-big-card photoCover="https://postgrain.com/wp-content/uploads/2017/04/stockvault.jpg"
+        cardTitle="Administre Seu Tempo"
+        cardDescription="Sua vida se tornará produtiva"
+        ></app-big-card>
     </div>
-    <div class="articles_others">
+    <div class="articles__others">
         <app-small-card></app-small-card>
         <app-small-card></app-small-card>
         <app-small-card></app-small-card>
