--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,19 +1,28 @@
 
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
+
 <app-menu-title></app-menu-title>
 
 <div class = "container__articles">
     <div class="articles__main">
-        <app-big-card photoCover="https://postgrain.com/wp-content/uploads/2017/04/stockvault.jpg"
+        <app-big-card 
+        Id="1"
+        photoCover="https://postgrain.com/wp-content/uploads/2017/04/stockvault.jpg"
         cardTitle="Administre Seu Tempo"
         cardDescription="Sua vida se tornará produtiva"
         ></app-big-card>
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+        Id="2"
+        photoCover="https://img.freepik.com/fotos-premium/martelo-de-juiz-com-objetos-de-negocios-direito-autoral-propriedade-intelectual_220873-8443.jpg"
+        cardTitle="Faça o seu Melhor"></app-small-card>
+        <app-small-card
+        Id="3"
+        photoCover="https://i.pinimg.com/originals/ef/44/12/ef441235d06341bf242145cb8efec981.jpg"
+        cardTitle="Volte para o Barco"></app-small-card>
+        <app-small-card
+        Id="4"
+        photoCover="https://mobcintra.com.br/blog_slmadv/wp-content/uploads/2024/05/DIREITOS-AUTORAIS-VS.-INTELIGENCIA-ARTIFICIAL-1.jpg"
+        cardTitle="Se conecte"></app-small-card>
     </div>
 </div>
